--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anosh Malik (me@ano.sh)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KingNoosh/nessie-nodejs-sdk.git"
+  },
   "license": "MIT",
   "dependencies": {
     "request": "^2.75.0",
